# cool_go

./: .gitignore  README.md
bots/github/: install-ngrok.sh  main.go
containers/desktop-apps/git_dev/: Dockerfile  run.sh
containers/desktop-apps/shellcheck/: Dockerfile  README.md  run-spellcheck.sh
containers/desktop-apps/ubuntu-nvidia/: Dockerfile  README.md  run-unv.sh
containers/docker-apps/list/: main.go
containers/docker-apps/run/: main.go
containers/docker-tutorial/: README.md
containers/docker-tutorial/01-make-container/: README.md  requirements.txt
containers/docker-tutorial/02-services/: README.md  docker-compose.yaml
containers/docker-tutorial/03-swarms/: README.md
containers/docker-tutorial/make-container/: Dockerfile  app.py
containers/docker-tutorial/vm-kvm_openstack/: README.md
containers/docker-tutorial/vm-vagrant/: README.md  Vagrantfile
containers/runc-getting_started/: Makefile  README.md
internals/: README.md
internals/assembly/: Makefile  direct_topfunc_call.go
k8s/: README-minikube.md  README.md
k8s/boostrapping-k8s/cli/: main.go
k8s/helm/: README.md
k8s/kind/: BUILD.bazel  Gopkg.toml  README.md  WORKSPACE  main.go
k8s/kind/cmd/: BUILD.bazel  build.go  build_image.go  create.go  delete.go  root.go
k8s/kind/images/node/: Dockerfile
k8s/kind/images/node/entrypoint/: BUILD.bazel  main.go
k8s/kind/pkg/cluster/: BUILD.bazel  cluster.go
k8s/quick_start/: minikube_install.sh
k8s_stuff/: README.md
k8s_stuff/quick_start/: README.md
rpcs/rpc_basics/: README.md
tooling/: README.md
tooling/tracer/: tracer.go  tracer_test.go
web/certbot/: main.go
web/jwts/: README.md  main.go
web/timeouts-streaming/: README.md  context.go  timer.go
(+173 files in other folders)
