load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/alejandrox1/cool_go/k8s/kind/images/node/entrypoint",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "entrypoint",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
